--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="max_movement_loop_attempts">3</integer>
+    <integer name="max_scan_ar_code_loop_attempts">3</integer>
 
     <!--
     Temporary variable used to choose which path to test while we wait for QR team to finish
