--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -5,6 +5,12 @@
     <integer name="flashlight_original_brightness_percent_for_scan">50</integer>
     <integer name="flashlight_final_brightness_percent_for_scan">90</integer>
 
+    <integer name="kibo_cam_image_height">1280</integer>
+    <integer name="kibo_cam_image_width">960</integer>
+    <integer name="percent_of_image_that_crop_removes">40</integer>
+    <integer name="resize_image_height">384</integer> <!-- Chosen randomly -->
+    <integer name="resize_image_width">288</integer> <!-- Chosen randomly -->
+
     <!--
     Temporary variable used to choose which path to test while we wait for QR team to finish
     Valid values between 1 - 8 correlate to which of the 8 different paths you wish to test
